fix horizontal scroll

--- a/styles/scss/vtex.slider-layout.scss
+++ b/styles/scss/vtex.slider-layout.scss
@@ -32,7 +32,8 @@
   box-shadow: 0px 3px 6px #0000001a;
 }
 .sliderRightArrow--main-slider-home2 {
-  right: -15px;
+  right: -10px;
+  padding-right: 0;
 }
 .sliderLeftArrow--main-slider-home2 {
   left: -15px;
